--- a/package.json
+++ b/package.json
@@ -14,12 +14,18 @@
     "@angular/common": "^16.2.0",
     "@angular/compiler": "^16.2.0",
     "@angular/core": "^16.2.0",
+    "@angular/fire": "^17.0.1",
     "@angular/forms": "^16.2.0",
+    "@angular/material": "^17.1.2",
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
     "@fortawesome/fontawesome-free": "^6.5.1",
+    "@ngrx/store": "^17.1.0",
+    "firebase": "^10.8.0",
+    "ngx-toastr": "^18.0.0",
     "rxjs": "~7.8.0",
+    "save": "^2.9.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
