--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^16.2.0",
     "@fortawesome/fontawesome-free": "^6.5.1",
     "@ngrx/store": "^17.1.0",
+    "emailjs-com": "^3.2.0",
     "firebase": "^10.8.0",
     "ngx-toastr": "^18.0.0",
     "rxjs": "~7.8.0",
