--- a/angular.json
+++ b/angular.json
@@ -65,10 +65,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "MWCAbuse:build:production"
+              "buildTarget": "MWCAbuse:build:production"
             },
             "development": {
-              "browserTarget": "MWCAbuse:build:development"
+              "buildTarget": "MWCAbuse:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -76,7 +76,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "MWCAbuse:build"
+            "buildTarget": "MWCAbuse:build"
           }
         },
         "test": {
